; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_dwc_otg.c_dwc_otg_timer_stop.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_dwc_otg.c_dwc_otg_timer_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dwc_otg_softc = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dwc_otg_softc*)* @dwc_otg_timer_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dwc_otg_timer_stop(%struct.dwc_otg_softc* %0) #0 {
  %2 = alloca %struct.dwc_otg_softc*, align 8
  store %struct.dwc_otg_softc* %0, %struct.dwc_otg_softc** %2, align 8
  %3 = load %struct.dwc_otg_softc*, %struct.dwc_otg_softc** %2, align 8
  %4 = getelementptr inbounds %struct.dwc_otg_softc, %struct.dwc_otg_softc* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %14

8:                                                ; preds = %1
  %9 = load %struct.dwc_otg_softc*, %struct.dwc_otg_softc** %2, align 8
  %10 = getelementptr inbounds %struct.dwc_otg_softc, %struct.dwc_otg_softc* %9, i32 0, i32 0
  store i64 0, i64* %10, align 8
  %11 = load %struct.dwc_otg_softc*, %struct.dwc_otg_softc** %2, align 8
  %12 = getelementptr inbounds %struct.dwc_otg_softc, %struct.dwc_otg_softc* %11, i32 0, i32 1
  %13 = call i32 @usb_callout_stop(i32* %12)
  br label %14

14:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @usb_callout_stop(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
